-
Bug
-
Resolution: Fixed
-
P2: Important
-
6.7.2
-
aa4af6859 (dev), e16a473d6 (6.8), b725ca60a (tqtc/lts-6.5)
Many examples have qputenv in wrong place. Those calls should be done before QGuiApplication due to QPA threads that potentially starts which query environment variables.
- relates to
-
QTBUG-129222 Sporadic segfault at getenv from pulseaudio during boot
-
- Closed
-
For Gerrit Dashboard: QTBUG-128352 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
585739,4 | Fix thread safety issues in some Quick 3D examples | dev | qt/qtquick3d | Status: MERGED | +2 | 0 |
602255,2 | Fix thread safety issues in some Quick 3D examples | 6.8 | qt/qtquick3d | Status: MERGED | +2 | 0 |
602379,2 | Fix thread safety issues in some Quick 3D examples | tqtc/lts-6.5 | qt/tqtc-qtquick3d | Status: MERGED | +2 | 0 |