Fix thread safety issues in some Quick 3D examples

Fixes: QTBUG-128352
Change-Id: Ic55b4224583e43a18e53f49fb31035c918f737c6
Reviewed-by: Jonas Karlsson <jonas.karlsson@qt.io>
(cherry picked from commit aa4af685954f9f3497c74cb685af9773bddf5ae7)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>
(cherry picked from commit e16a473d69d31e176146177810e78725ee19dd76)